css/index.css
body {
    background-color: #333;
    background-repeat: no-repeat;
    background-size: cover;
    /*background-image:  linear-gradient(135deg, rgb(255, 120, 84), rgb(253, 38, 125));*/
}

.blurImage {
    -webkit-filter: blur(2px); /* Safari */
    filter: blur(2px);
    transform: scale(1.02);
    max-height: 600px;
    width: 100%;
    object-fit: cover;
}

.carousel {
    padding-left: 0px;
    padding-right: 0px;
}

.carousel-caption h1 {
    font-size: 100px;
    text-shadow: 4px 4px 10px black;
}

.carousel-caption img {
    width: 200px;
}

@media screen and (max-width: 1300px) {
    .carousel-caption h1 {
        font-size: 70px;
        text-shadow: 4px 4px 10px black;
    }
    
    .carousel-caption img {
        width: 150px;
    }
  }

  @media screen and (max-width: 900px) {
    .carousel-caption h1 {
        font-size: 40px;
        text-shadow: 4px 4px 10px black;
    }
    
    .carousel-caption img {
        width: 100px;
    }
  }

  @media screen and (max-width: 550px) {
    .carousel-caption h1 {
        font-size: 20px;
        text-shadow: 4px 4px 10px black;
    }
    
    .carousel-caption img {
        width: 50px;
    }
  }

.topInfo {
    vertical-align: middle;
    text-align: center;
    background-image:  linear-gradient(180deg, rgb(243, 243, 243), rgb(190, 190, 190));
    margin: 0 auto;
}

.topInfo h1 {
    font-size: 60px;
}

.profileAvatar {
    margin: 20px;
    border-radius: 50%;
    width: 200px;
    border: 5px solid #333;
}

.profileDivider {
    height: 4px;
    background-color: #333;
    border-radius: 2px;
    border-top: 1px solid #333;
    margin: 1em 0;
    padding: 0;
}

.bottomInfo {
    vertical-align: middle;
    text-align: center;
    margin: 0 auto;
    background-image:  linear-gradient(0deg, rgb(243, 243, 243), rgb(190, 190, 190));
}

.bottomInfo h1 {
    font-size: 60px;
}

.projectImage {
    width: 200px;
    height: 200px;
    clear: both;
}

.programImage {
    width: 40px;
    display: inline-block;
}

.footer {
    clear: both;
    text-align: center;
    vertical-align: middle;
    padding: 5px;
    background-color: #333;
    color: #9d9d9d;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    position:relative;
    bottom:0;
    width:100%;
    height:60px;   /* Height of the footer */
}

.githubLink {
    vertical-align: sub;
}

.githubLink svg path:hover {
    fill: #646464;
}

.footer svg {
    width: 20px;
    height: 20px;
}

h3 svg {
    width: 30px;
    height: 30px;
}

.roundCorners{
    border-radius: 20%;
}

.tinderGradient {
    background-image:  linear-gradient(262deg, rgb(255, 120, 84), rgb(253, 38, 125));
}

.purpleGradient {
    background-image:  linear-gradient(262deg, rgb(127, 0, 201), rgb(255, 120, 84));
}

.blueGradient {
    background-image:  linear-gradient(262deg, rgb(36,59,85), rgb(127, 0, 201));
}

.greenGradient {
    background-image:  linear-gradient(262deg, rgb(76,209,55), rgb(36,59,85));
}

